syntax = "proto3";

package speechkit.tts.v3;
import "yandex/cloud/ai/tts/v3/tts.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/ai/tts/v3;tts";
option java_package = "yandex.cloud.api.ai.tts.v3";

// A set of methods for voice synthesis.
service Synthesizer {
    // Synthesizing text into speech.
    rpc UtteranceSynthesis (UtteranceSynthesisRequest) returns (stream UtteranceSynthesisResponse) {
    }
}
